Adding page_data_ready script on all page

--- a/alexandre-moreau-product-page.html
+++ b/alexandre-moreau-product-page.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexandre Moreau - Senior Tech Lead | Consulteo</title>
+
+    <!-- DataLayer Script -->
+    <script src="consulteo-datalayer.js"></script>
+    
+    <!-- GTM Script -->
+
     <style>
         * {
             margin: 0;
