--- a/pierre-lemoine-product-page.html
+++ b/pierre-lemoine-product-page.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pierre Lemoine - Operations Manager | Consulteo</title>
+
+    <!-- DataLayer Script -->
+    <script src="consulteo-datalayer.js"></script>
+    
+    <!-- GTM Script -->
+
     <style>
         * {
             margin: 0;
