central footer and header + external CSS

--- a/checkout.html
+++ b/checkout.html
@@ -10,418 +10,11 @@
     
     <!-- GTM Script -->
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<link rel="stylesheet" href="style.css">
 
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-        }
-
-        /* Header Styles */
-        header {
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-        }
-
-        .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .nav-categories {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav-categories a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .nav-categories a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .header-actions {
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-        }
-
-        .header-actions a {
-            color: #333;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header-actions a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .cart-count {
-            background: #dc3545;
-            color: white;
-            border-radius: 50%;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            margin-left: 0.5rem;
-        }
-
-        /* Breadcrumb */
-        .breadcrumb {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 1rem 2rem;
-            color: #666;
-        }
-
-        .breadcrumb a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .breadcrumb a:hover {
-            text-decoration: underline;
-        }
-
-        /* Main Content */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem 2rem;
-        }
-
-        .page-title {
-            font-size: 2.5rem;
-            margin-bottom: 2rem;
-            color: #333;
-            text-align: center;
-        }
-
-        /* Checkout Layout */
-        .checkout-container {
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            gap: 3rem;
-        }
-
-        .checkout-form {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
-        }
-
-        .checkout-section {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .section-title {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: #333;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 0.5rem;
-        }
-
-        /* Form Styles */
-        .form-group {
-            margin-bottom: 1.5rem;
-        }
-
-        .form-row {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 1rem;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 0.5rem;
-            color: #333;
-            font-weight: 500;
-        }
-
-        .form-group input,
-        .form-group select {
-            width: 100%;
-            padding: 0.75rem;
-            border: 2px solid #e9ecef;
-            border-radius: 8px;
-            font-size: 1rem;
-            transition: border-color 0.3s;
-        }
-
-        .form-group input:focus,
-        .form-group select:focus {
-            outline: none;
-            border-color: #007bff;
-        }
-
-        /* Radio Button Styles */
-        .radio-group {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .radio-option {
-            display: flex;
-            align-items: center;
-            padding: 1rem;
-            border: 2px solid #e9ecef;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        .radio-option:hover {
-            border-color: #007bff;
-            background-color: #f8f9fa;
-        }
-
-        .radio-option input[type="radio"] {
-            margin-right: 1rem;
-            width: auto;
-        }
-
-        .radio-option.selected {
-            border-color: #007bff;
-            background-color: #e3f2fd;
-        }
-
-        .option-info {
-            flex-grow: 1;
-        }
-
-        .option-title {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.25rem;
-        }
-
-        .option-price {
-            color: #007bff;
-            font-weight: bold;
-        }
-
-        .option-description {
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        /* Order Summary */
-        .order-summary {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            height: fit-content;
-            position: sticky;
-            top: 100px;
-        }
-
-        .cart-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 0;
-            border-bottom: 1px solid #e9ecef;
-        }
-
-        .cart-item:last-child {
-            border-bottom: none;
-        }
-
-        .item-info {
-            flex-grow: 1;
-        }
-
-        .item-name {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.25rem;
-        }
-
-        .item-ean {
-            color: #666;
-            font-size: 0.9rem;
-            font-family: 'Courier New', monospace;
-        }
-
-        .item-quantity {
-            background: #f8f9fa;
-            padding: 0.25rem 0.5rem;
-            border-radius: 4px;
-            font-size: 0.9rem;
-            margin: 0 1rem;
-        }
-
-        .item-price {
-            font-weight: bold;
-            color: #007bff;
-        }
-
-        .empty-cart {
-            text-align: center;
-            color: #666;
-            padding: 2rem;
-        }
-
-        .summary-row {
-            display: flex;
-            justify-content: space-between;
-            margin: 1rem 0;
-        }
-
-        .summary-total {
-            border-top: 2px solid #007bff;
-            padding-top: 1rem;
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #007bff;
-        }
-
-        /* Order Button */
-        .order-button {
-            width: 100%;
-            padding: 1.5rem;
-            background: #007bff;
-            color: white;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2rem;
-            font-weight: 600;
-            cursor: pointer;
-            transition: all 0.3s;
-            margin-top: 2rem;
-        }
-
-        .order-button:hover {
-            background: #0056b3;
-            transform: translateY(-2px);
-        }
-
-        .order-button:disabled {
-            background: #6c757d;
-            cursor: not-allowed;
-            transform: none;
-        }
-
-        /* Success Message */
-        .success-message {
-            background: #d4edda;
-            color: #155724;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            display: none;
-        }
-
-        /* Footer */
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 3rem;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        .footer-links a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: #007bff;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .header-container {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .nav-categories {
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .container {
-                padding: 0 1rem 2rem;
-            }
-
-            .checkout-container {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-            }
-
-            .form-row {
-                grid-template-columns: 1fr;
-            }
-
-            .footer-links {
-                flex-direction: column;
-                gap: 1rem;
-            }
-        }
-    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="header-container">
-            <a href="index.html" class="logo">Consulteo</a>
-            <nav class="nav-categories">
-                <a href="managers.html">Managers</a>
-                <a href="leads.html">Leads</a>
-                <a href="consultants.html">Consultants</a>
-                <a href="interns.html">Interns</a>
-            </nav>
-            <div class="header-actions">
-                <a href="account.html">Account</a>
-                <a href="checkout.html">Cart <span class="cart-count" id="cart-count">0</span></a>
-            </div>
-        </div>
-    </header>
+
 
     <!-- Breadcrumb -->
     <div class="breadcrumb">
@@ -556,16 +149,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-links">
-            <a href="#">CGV</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie Policy</a>
-            <a href="#">Blog</a>
-        </div>
-        <p>&copy; 2024 Consulteo - Professional Consultants Marketplace</p>
-    </footer>
+  
 
     <script>
         let cart = JSON.parse(localStorage.getItem('consulteo-cart') || '[]');
@@ -707,5 +291,16 @@
             }, 2000);
         }
     </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    fetch("header.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("afterbegin", data));
+
+    fetch("footer.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("beforeend", data));
+  });
+</script>
 </body>
 </html>
