--- a/confirmation.html
+++ b/confirmation.html
@@ -10,368 +10,11 @@
     
     <!-- GTM Script -->
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<link rel="stylesheet" href="style.css">
 
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-        }
-
-        /* Header Styles */
-        header {
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-        }
-
-        .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .nav-categories {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav-categories a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .nav-categories a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .header-actions {
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-        }
-
-        .header-actions a {
-            color: #333;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header-actions a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .cart-count {
-            background: #dc3545;
-            color: white;
-            border-radius: 50%;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            margin-left: 0.5rem;
-        }
-
-        /* Main Content */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 4rem 2rem;
-        }
-
-        /* Success Section */
-        .success-section {
-            text-align: center;
-            margin-bottom: 4rem;
-        }
-
-        .success-icon {
-            width: 120px;
-            height: 120px;
-            background: #28a745;
-            border-radius: 50%;
-            margin: 0 auto 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3rem;
-        }
-
-        .success-title {
-            font-size: 2.5rem;
-            color: #28a745;
-            margin-bottom: 1rem;
-        }
-
-        .success-message {
-            font-size: 1.2rem;
-            color: #666;
-            margin-bottom: 2rem;
-        }
-
-        .order-number {
-            background: #e3f2fd;
-            padding: 1rem 2rem;
-            border-radius: 8px;
-            display: inline-block;
-            font-size: 1.1rem;
-            font-weight: 600;
-            color: #007bff;
-        }
-
-        /* Order Details */
-        .order-details {
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            gap: 3rem;
-            margin-bottom: 3rem;
-        }
-
-        .order-items {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .order-summary {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            height: fit-content;
-        }
-
-        .section-title {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: #333;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 0.5rem;
-        }
-
-        .cart-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 0;
-            border-bottom: 1px solid #e9ecef;
-        }
-
-        .cart-item:last-child {
-            border-bottom: none;
-        }
-
-        .item-info {
-            flex-grow: 1;
-        }
-
-        .item-name {
-            font-weight: 600;
-            color: #333;
-            margin-bottom: 0.25rem;
-        }
-
-        .item-ean {
-            color: #666;
-            font-size: 0.9rem;
-            font-family: 'Courier New', monospace;
-        }
-
-        .item-quantity {
-            background: #f8f9fa;
-            padding: 0.25rem 0.5rem;
-            border-radius: 4px;
-            font-size: 0.9rem;
-            margin: 0 1rem;
-        }
-
-        .item-price {
-            font-weight: bold;
-            color: #007bff;
-        }
-
-        .summary-row {
-            display: flex;
-            justify-content: space-between;
-            margin: 1rem 0;
-        }
-
-        .summary-total {
-            border-top: 2px solid #007bff;
-            padding-top: 1rem;
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #007bff;
-        }
-
-        /* Customer Details */
-        .customer-details {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            margin-bottom: 3rem;
-        }
-
-        .details-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        .detail-section {
-            background: #f8f9fa;
-            padding: 1.5rem;
-            border-radius: 8px;
-        }
-
-        .detail-title {
-            font-weight: 600;
-            color: #007bff;
-            margin-bottom: 1rem;
-        }
-
-        .detail-info {
-            color: #555;
-            line-height: 1.8;
-        }
-
-        /* Actions */
-        .actions {
-            text-align: center;
-            margin-top: 3rem;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 1rem 2rem;
-            background: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s;
-            font-weight: 600;
-            margin: 0 0.5rem;
-        }
-
-        .btn:hover {
-            background: #0056b3;
-            transform: translateY(-2px);
-        }
-
-        .btn-secondary {
-            background: #6c757d;
-        }
-
-        .btn-secondary:hover {
-            background: #545b62;
-        }
-
-        /* Footer */
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 3rem;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        .footer-links a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: #007bff;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .header-container {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .nav-categories {
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .container {
-                padding: 2rem 1rem;
-            }
-
-            .order-details {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-            }
-
-            .details-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .footer-links {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .actions {
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-            }
-        }
-    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="header-container">
-            <a href="index.html" class="logo">Consulteo</a>
-            <nav class="nav-categories">
-                <a href="managers.html">Managers</a>
-                <a href="leads.html">Leads</a>
-                <a href="consultants.html">Consultants</a>
-                <a href="interns.html">Interns</a>
-            </nav>
-            <div class="header-actions">
-                <a href="account.html">Account</a>
-                <a href="checkout.html">Cart <span class="cart-count" id="cart-count">0</span></a>
-            </div>
-        </div>
-    </header>
+
 
     <!-- Main Content -->
     <div class="container">
@@ -439,16 +82,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-links">
-            <a href="#">CGV</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie Policy</a>
-            <a href="#">Blog</a>
-        </div>
-        <p>&copy; 2024 Consulteo - Professional Consultants Marketplace</p>
-    </footer>
+  
 
     <script>
         // Initialize page
@@ -537,5 +171,16 @@
             document.getElementById('cart-count').textContent = '0';
         }
     </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    fetch("header.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("afterbegin", data));
+
+    fetch("footer.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("beforeend", data));
+  });
+</script>
 </body>
 </html>
