--- a/marie-dubois-product-page.html
+++ b/marie-dubois-product-page.html
@@ -10,488 +10,11 @@
     
     <!-- GTM Script -->
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
+<link rel="stylesheet" href="style.css">
 
-        body {
-            font-family: 'Arial', sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #f8f9fa;
-        }
-
-        /* Header Styles */
-        header {
-            background: #fff;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-        }
-
-        .header-container {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-        }
-
-        .logo {
-            font-size: 1.8rem;
-            font-weight: bold;
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .nav-categories {
-            display: flex;
-            gap: 2rem;
-        }
-
-        .nav-categories a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .nav-categories a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .header-actions {
-            display: flex;
-            gap: 1rem;
-            align-items: center;
-        }
-
-        .header-actions a {
-            color: #333;
-            text-decoration: none;
-            padding: 0.5rem 1rem;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .header-actions a:hover {
-            background-color: #f8f9fa;
-        }
-
-        .cart-count {
-            background: #dc3545;
-            color: white;
-            border-radius: 50%;
-            padding: 0.2rem 0.5rem;
-            font-size: 0.8rem;
-            margin-left: 0.5rem;
-        }
-
-        /* Breadcrumb */
-        .breadcrumb {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 1rem 2rem;
-            color: #666;
-        }
-
-        .breadcrumb a {
-            color: #007bff;
-            text-decoration: none;
-        }
-
-        .breadcrumb a:hover {
-            text-decoration: underline;
-        }
-
-        /* Main Content */
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 2rem 2rem;
-        }
-
-        /* Product Detail */
-        .product-detail {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 4rem;
-            margin-bottom: 4rem;
-            background: white;
-            padding: 3rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-
-        .product-detail-image {
-            width: 100%;
-            height: 500px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 15px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3rem;
-            font-weight: bold;
-            position: relative;
-        }
-
-        .product-detail-image::after {
-            content: 'Senior Project Manager';
-            position: absolute;
-            bottom: 2rem;
-            left: 2rem;
-            font-size: 1.2rem;
-            font-weight: 500;
-        }
-
-        .product-info {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .product-info h1 {
-            font-size: 2.5rem;
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-
-        .product-role {
-            font-size: 1.3rem;
-            color: #007bff;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-        }
-
-        .product-codes {
-            background: #f8f9fa;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1.5rem;
-        }
-
-        .product-codes strong {
-            color: #495057;
-        }
-
-        .product-codes span {
-            color: #6c757d;
-            font-family: 'Courier New', monospace;
-        }
-
-        .short-description {
-            font-size: 1.1rem;
-            color: #666;
-            margin-bottom: 2rem;
-            line-height: 1.8;
-        }
-
-        .price-section {
-            background: #e3f2fd;
-            padding: 1.5rem;
-            border-radius: 10px;
-            margin-bottom: 2rem;
-        }
-
-        .price {
-            font-size: 2rem;
-            font-weight: bold;
-            color: #007bff;
-            margin-bottom: 0.5rem;
-        }
-
-        .price-period {
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 1rem 2rem;
-            background: #007bff;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            transition: all 0.3s;
-            border: none;
-            cursor: pointer;
-            font-size: 1.1rem;
-            font-weight: 600;
-            text-align: center;
-        }
-
-        .btn:hover {
-            background: #0056b3;
-            transform: translateY(-2px);
-        }
-
-        .btn-added {
-            background: #28a745;
-        }
-
-        .btn-added:hover {
-            background: #1e7e34;
-        }
-
-        /* Skills Section */
-        .skills-section {
-            background: white;
-            padding: 2rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            margin-bottom: 3rem;
-        }
-
-        .skills-section h3 {
-            font-size: 1.5rem;
-            margin-bottom: 1.5rem;
-            color: #333;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 1rem;
-        }
-
-        .skill-item {
-            background: #f8f9fa;
-            padding: 1rem;
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        .skill-item strong {
-            color: #007bff;
-            display: block;
-            margin-bottom: 0.5rem;
-        }
-
-        /* Long Description */
-        .description-section {
-            background: white;
-            padding: 3rem;
-            border-radius: 15px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            margin-bottom: 3rem;
-        }
-
-        .description-section h3 {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-            color: #333;
-            border-bottom: 3px solid #007bff;
-            padding-bottom: 0.5rem;
-        }
-
-        .description-section p {
-            font-size: 1.1rem;
-            line-height: 1.8;
-            color: #555;
-            margin-bottom: 1.5rem;
-        }
-
-        .experience-highlights {
-            background: #f8f9fa;
-            padding: 2rem;
-            border-radius: 10px;
-            margin: 2rem 0;
-        }
-
-        .experience-highlights h4 {
-            color: #007bff;
-            margin-bottom: 1rem;
-        }
-
-        .experience-highlights ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .experience-highlights li {
-            padding: 0.5rem 0;
-            border-bottom: 1px solid #dee2e6;
-        }
-
-        .experience-highlights li:last-child {
-            border-bottom: none;
-        }
-
-        .experience-highlights li::before {
-            content: "✓";
-            color: #28a745;
-            font-weight: bold;
-            margin-right: 0.5rem;
-        }
-
-        /* Related Products */
-        .related-products {
-            margin-top: 4rem;
-        }
-
-        .section-title {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-            text-align: center;
-            color: #333;
-        }
-
-        .product-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
-        .product-card {
-            background: white;
-            border-radius: 15px;
-            padding: 2rem;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
-            text-align: center;
-        }
-
-        .product-card:hover {
-            transform: translateY(-8px);
-            box-shadow: 0 12px 25px rgba(0,0,0,0.15);
-        }
-
-        .product-image {
-            width: 100px;
-            height: 100px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 50%;
-            margin: 0 auto 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 1rem;
-            font-weight: bold;
-        }
-
-        .product-title {
-            font-size: 1.3rem;
-            font-weight: bold;
-            margin-bottom: 0.5rem;
-            color: #333;
-        }
-
-        .product-category {
-            color: #007bff;
-            font-size: 0.9rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-        }
-
-        /* Footer */
-        footer {
-            background: #333;
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 3rem;
-        }
-
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            gap: 2rem;
-            margin-bottom: 1rem;
-        }
-
-        .footer-links a {
-            color: white;
-            text-decoration: none;
-            transition: color 0.3s;
-        }
-
-        .footer-links a:hover {
-            color: #007bff;
-        }
-
-        /* Success Message */
-        .success-message {
-            background: #d4edda;
-            color: #155724;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            display: none;
-        }
-
-        /* Responsive */
-        @media (max-width: 768px) {
-            .header-container {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .nav-categories {
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .container {
-                padding: 0 1rem 2rem;
-            }
-
-            .product-detail {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-                padding: 2rem;
-            }
-
-            .product-detail-image {
-                height: 300px;
-                font-size: 2rem;
-            }
-
-            .product-info h1 {
-                font-size: 2rem;
-            }
-
-            .description-section {
-                padding: 2rem;
-            }
-
-            .footer-links {
-                flex-direction: column;
-                gap: 1rem;
-            }
-
-            .skills-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
 </head>
 <body>
-    <!-- Header -->
-    <header>
-        <div class="header-container">
-            <a href="index.html" class="logo">Consulteo</a>
-            <nav class="nav-categories">
-                <a href="managers.html">Managers</a>
-                <a href="leads.html">Leads</a>
-                <a href="consultants.html">Consultants</a>
-                <a href="interns.html">Interns</a>
-            </nav>
-            <div class="header-actions">
-                <a href="account.html">Account</a>
-                <a href="checkout.html">Cart <span class="cart-count" id="cart-count">0</span></a>
-            </div>
-        </div>
-    </header>
+
 
     <!-- Breadcrumb -->
     <div class="breadcrumb">
@@ -619,16 +142,7 @@
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <div class="footer-links">
-            <a href="#">CGV</a>
-            <a href="#">Privacy</a>
-            <a href="#">Cookie Policy</a>
-            <a href="#">Blog</a>
-        </div>
-        <p>&copy; 2024 Consulteo - Professional Consultants Marketplace</p>
-    </footer>
+  
 
     <script>
         // Product data
@@ -689,5 +203,16 @@
             document.getElementById('cart-count').textContent = totalItems;
         }
     </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    fetch("header.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("afterbegin", data));
+
+    fetch("footer.html")
+      .then(response => response.text())
+      .then(data => document.body.insertAdjacentHTML("beforeend", data));
+  });
+</script>
 </body>
 </html>
